testbed/microservice_replication/framework/yamls-to-apply/productcatalogservice-apply/productcatalogservice-netpol-8-recommendationservice-8.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-7-allow-recommendationservice-7
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: recommendationservice-7
    ports:
    - port: 40900
  podSelector:
    matchLabels:
      app: productcatalogservice-7
